<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/item_inbox"
            android:id="@+id/inbox_id"
            android:icon="@drawable/ic_baseline_inbox_24"/>
        <item android:title="@string/starred"
            android:id="@+id/starred_id"
            android:icon="@drawable/ic_baseline_star_24"/>
        <item android:title="@string/send_mail"
            android:id="@+id/send_id"
            android:icon="@drawable/ic_baseline_send_24"/>
        <item android:title="@string/drafts"
            android:id="@+id/drafts_id"
            android:icon="@drawable/ic_baseline_drafts_24"/>
    </group>
    <item android:title="@string/sub_header">
        <menu>
            <item android:title="@string/all_mail"
                android:id="@+id/all_mail_id"
                android:icon="@drawable/ic_baseline_email_24"/>
            <item android:title="@string/trash"
                android:id="@+id/trash_id"
                android:icon="@drawable/ic_baseline_delete_24"/>
            <item android:title="@string/spam"
                android:id="@+id/spam_id"
                android:icon="@drawable/ic_baseline_announcement_24"/>
        </menu>
    </item>
</menu>